<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopOrder"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/addName"
        style="@style/textStyle"
        android:id="@+id/name"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/quantity"
        style="@style/textStyle"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="+"
            android:onClick="Increament"
            style="@style/ButtonStyle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/quantity"
            android:textColor="#000000"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="-"
            android:onClick="Decreament"
            style="@style/ButtonStyle"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/price"
        android:gravity="center"
        style="@style/textStyle"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/textStyle"
        android:gravity="center"
        android:text=""
        android:id="@+id/price"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/toppings"
        style="@style/textStyle"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/whippedCream"
        style="@style/textStyle"
        android:id="@+id/addWhippedCream"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/chocolate"
        style="@style/textStyle"
        android:id="@+id/addChocolate"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="Order"
        android:text="@string/checkPrice"
        android:gravity="center"
        android:layout_marginTop="10dp"
        style="@style/ButtonStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/summary"
        android:gravity="center"
        android:textSize="18sp"
        style="@style/textStyle"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height= "150dp"
        android:layout_weight="5"
        style="@style/textStyle"
        android:text=""
        android:id="@+id/summary"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="Mail"
        android:text="@string/order"
        android:gravity="center"
        android:layout_marginTop="10dp"
        style="@style/ButtonStyle"/>

</LinearLayout>

</ScrollView>
